# murr

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs  openapi.yaml  release.sh  run_bench.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  website.yml
.memory/: allocator.md  api.md  bench_profiling.md  config.md  flight.md  generic_scalar_columns.md  hash_benchmarks.md  http_client.md  incremental_index_rebuild.md  io3_segment_format.md  io4_block_rocksdb_store.md  io4_column_codecs.md  io4_plain_rocksdb_store.md  io4_rocksdb_store.md  io4_service_integration.md  io4_table.md  io_block_rocksdb_store.md  io_codec_design.md  io_column_codecs.md  io_rocksdb_store.md  io_service_integration.md  io_table.md  iouring_directory.md  iouring_perf_findings.md  non_generic_service.md  python_bindings.md  storage_design.md
benches/: api_bench.rs  benchutil.rs  flight_bench.rs  hashmap_bench.rs  hashmap_row_bench.rs  http_bench.rs  mmap_uring_bench.rs  multi_segment_index_bench.rs  read_bench.rs  read_block.rs  read_memory.rs  read_plain.rs  redis_feast_bench.rs  redis_featureblob_bench.rs  row_vs_col_bench.rs  row_vs_columnar_bench.rs  table_bench.rs  write.rs
benches/backends/: mod.rs  murr.rs  redis_blob.rs  redis_feast.rs  testdata.rs
benches/common/: data.rs  dataset.rs  mod.rs  profiler.rs  read_bench.rs
plans/: directory_design.md  hash_benchmarks.md
proto/: murrdb.proto
python/: Cargo.toml  build-wheels.sh  pyproject.toml
python/python/murr/: __init__.py  _base.py  aio.py  client.py  config.py  http.py  schema.py  sync.py
python/src/: async_client.rs  config.rs  error.rs  init.rs  lib.rs  schema.rs  sync_client.rs
python/tests/: conftest.py  test_aio.py  test_aio_murr.py  test_config.py  test_local_murr.py  test_sync.py  test_sync_murr.py
src/: lib.rs  main.rs  testutil.rs
src/api/: convert.rs  error.rs  handlers.rs  mod.rs  state.rs
src/api/flight/: error.rs  mod.rs  ticket.rs
src/api/http/: convert.rs  error.rs  handlers.rs  json.rs  mod.rs
src/conf/: config.rs  mod.rs  path.rs  server.rs  storage.rs  table.rs
src/core/: args.rs  dtype.rs  error.rs  logger.rs  mod.rs  schema.rs
src/directory/: directory.rs  heap.rs  local.rs  mod.rs  reader.rs  writer.rs
src/discovery/: discovery.rs  partition.rs
src/io/: batch.rs  bitmap.rs  bytes.rs  codec.rs  info.rs  mod.rs  model.rs  row.rs  schema.rs  url.rs
src/io/codec/: bool_.rs  float32.rs  float64.rs  int16.rs  int32.rs  int64.rs  int8.rs  mod.rs  primitive.rs  test_util.rs  uint16.rs  uint32.rs  uint64.rs  uint8.rs  utf8.rs
src/io/column/: float32.rs  float64.rs  mod.rs  primitive.rs  reopen.rs  utf8.rs
src/io/column/float32/: footer.rs  mod.rs  reader.rs  writer.rs
src/io/column/scalar/: footer.rs  mod.rs  reader.rs  writer.rs
src/io/column/utf8/: footer.rs  mod.rs  reader.rs  writer.rs
src/io/directory/: file_writer.rs  local.rs  mod.rs
src/io/directory/iouring/: directory.rs  mod.rs  pool.rs  reader.rs  ring.rs  writer.rs
src/io/directory/mem/: directory.rs  mod.rs  reader.rs  writer.rs
src/io/directory/mmap/: directory.rs  mod.rs  reader.rs  writer.rs
src/io/fs/: local.rs  mod.rs  url.rs
src/io/row/: read.rs  write.rs
src/io/segment/: format.rs  mod.rs  read.rs  write.rs
src/io/store/: manifest.rs  memory.rs  mod.rs  snapshot.rs  test_util.rs
src/io/store/rocksdb/: block.rs  mod.rs  plain.rs
src/io/table/: cached.rs  index.rs  mod.rs  reader.rs  table.rs  view.rs  writer.rs
src/io/table/column/: bitmap.rs  mod.rs
src/io/table/index/: keys.rs  mod.rs
src/io/table/segment/: footer.rs  mod.rs  trailer.rs
src/io2/: bitmap.rs  bytes.rs  info.rs  mod.rs  url.rs
src/io2/column/: float32.rs  mod.rs  reopen.rs
src/io2/column/float32/: footer.rs  mod.rs  reader.rs  writer.rs
src/io2/column/utf8/: footer.rs  mod.rs  reader.rs  writer.rs
src/io2/directory/: mod.rs
src/io2/directory/mem/: directory.rs  reader.rs  writer.rs
src/io2/directory/mmap/: directory.rs  reader.rs  writer.rs
src/io2/table/: column.rs  index.rs  key_offset.rs  mod.rs  table.rs
src/io3/: batch.rs  bitmap.rs  info.rs  mod.rs  model.rs  row.rs
src/io3/column/: float32.rs  float64.rs  mod.rs  primitive.rs  reader.rs  utf8.rs  writer.rs
src/io3/directory/: mod.rs
src/io3/directory/mem/: directory.rs  mod.rs  reader.rs  writer.rs
src/io3/directory/mmap/: directory.rs  mod.rs  reader.rs  writer.rs
src/io3/table/: index.rs  mod.rs  reader.rs  segment.rs  writer.rs
src/io3/table/index/: keys.rs  mod.rs
src/io3/table/segment/: footer.rs  mod.rs
src/io4/: mod.rs  schema.rs
src/io4/column/: mod.rs  primitive.rs  utf8.rs
src/io4/fs/: local.rs  mod.rs
src/io4/row/: read.rs  write.rs
src/io4/store/: manifest.rs  memory.rs  mod.rs
src/io4/table/: mod.rs
src/manager/: loader.rs  manager.rs  mod.rs  state.rs
src/old/: mod.rs
src/old/api/: error.rs  handlers.rs  response.rs  state.rs  types.rs
src/old/discovery/: mod.rs  store.rs
src/old/manager/: loader.rs  manager.rs  state.rs
src/old/parquet/: convert.rs
src/parquet/: convert.rs  mod.rs  schema.rs
src/proto/: ext.rs  mod.rs  model.rs
src/segment/: read.rs  write.rs
src/service/: mod.rs  state.rs
src/table/: bitmap.rs  column.rs  dense_float32.rs  dense_string.rs  mod.rs  reader.rs  table.rs  table2.rs  view.rs  writer.rs
src/table/column/: bitmap.rs  dense_float32.rs  dense_string.rs  mod.rs
src/util/: logo.rs
tests/: api.rs  api_test.rs  e2e_test.rs  flight_test.rs  loading.rs  segments.rs
tests/common/: mod.rs
tests/fixtures/: anime_info.csv
tests/fixtures/config/: full.yml  simple.yml
tests/python/: conftest.py  requirements.txt  test_e2e.py
util/: example.parquet  generate_parquet.py  requirements.txt
website/: Makefile  hugo.toml
website/content/: _index.md
website/layouts/: index.html
website/layouts/_default/: baseof.html
website/layouts/partials/: benchmarks.html  footer.html  head.html  hero.html  nav.html  quickstart.html  what.html  why.html
website/static/: CNAME
website/static/css/: style.css
(+14 files in other folders)
