[workspace]
members = ["python"]

[workspace.package]
version = "0.1.6"

[package]
name = "murr"
version.workspace = true
edition = "2024"
description = "Columnar in-memory cache for AI/ML inference workloads"
license = "Apache-2.0"

[features]
testutil = ["dep:tempfile", "dep:rand"]

[dependencies]
config = "0.15.21"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
log = { version = "0.4.29", features = ["kv"] }
env_logger = "0.11"
clap = { version = "4.6.0", features = ["derive"] }
arrow = { version = "58", default-features = true, features = ["ipc"] }
parquet = { version = "58", default-features = false, features = ["arrow"] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "fs",
    "time",
    "sync",
    "macros",
] }
memmap2 = "0.9"
axum = "0.8"
arrow-flight = "58"
tonic = "0.14"
futures = "0.3"
serde_json = "1"
serde_yaml_ng = "0.10"
ahash = "0.8"
ouroboros = "0.18"
mimalloc = { version = "0.1", default-features = false }
bytemuck = "1"
bincode = { version = "2", features = ["derive"] }
tempfile = { version = "3", optional = true }
rand = { version = "0.10", optional = true }

[dev-dependencies]
murr = { path = ".", features = ["testutil"] }
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }
http-body-util = "0.1"
tokio-stream = "0.1"
tower = { version = "0.5", features = ["util"] }

[[bench]]
name = "multi_segment_index_bench"
harness = false

[profile.bench]
debug = 1                   # line tables + symbols (good enough for perf)
lto = false                 # optional: makes disasm easier to read
codegen-units = 1           # optional: more stable codegen
panic = "abort"             # optional
force-frame-pointers = true

[profile.bench.build-override]
debug = true
# force-frame-pointers = true

[profile.bench.package."*"]
debug = true
# force-frame-pointers = true
