[workspace]
members = ["python"]

[workspace.package]
version = "0.2.0-rc1"

[package]
name = "murr"
version.workspace = true
edition = "2024"
description = "Columnar in-memory cache for AI/ML inference workloads"
license = "Apache-2.0"

[features]
testutil = ["dep:tempfile", "dep:rand"]

[dependencies]
config = "0.15.22"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
log = { version = "0.4.29", features = ["kv"] }
env_logger = "0.11"
clap = { version = "4.6.0", features = ["derive"] }
arrow = { version = "58", default-features = true, features = ["ipc"] }
parquet = { version = "58", default-features = false, features = ["arrow"] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "fs",
    "time",
    "sync",
    "macros",
] }
memmap2 = "0.9"
axum = "0.8"
arrow-flight = "58"
tonic = "0.14"
futures = "0.3"
serde_json = "1"
serde_yaml_ng = "0.10"
mimalloc = { version = "0.1", features = ["v3"] }
bytemuck = "1"
tempfile = { version = "3", optional = true }
rand = { version = "0.10", optional = true }
async-trait = "0.1"
hashbrown = "0.17.0"
lean_string = "0.6"
rustc-hash = "2"

[dev-dependencies]
murr = { path = ".", features = ["testutil"] }
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }
rand = "0.10"
http-body-util = "0.1"
tokio-stream = "0.1"
tower = { version = "0.5", features = ["util"] }
csv = "1"

[[bench]]
name = "multi_segment_index_bench"
harness = false

[profile.bench]
debug = 1         # line tables + symbols (good enough for perf)
lto = false       # optional: makes disasm easier to read
codegen-units = 1 # optional: more stable codegen

[profile.bench.build-override]
debug = true
# force-frame-pointers = true

[profile.bench.package."*"]
debug = true
# force-frame-pointers = true
