[package]
name = "murr-python"
version.workspace = true
edition = "2024"
publish = false

[lib]
name = "libmurr"
crate-type = ["cdylib"]

[dependencies]
murr = { path = ".." }
pyo3 = { version = "0.28", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
arrow = { version = "58", features = ["pyarrow"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
